--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <title>About | Bernie Ip</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-    <header id="topheader">
+    <nav class="navbar navbar-default">
         <div class="container">
             <a href="index.html" id="logo">Bernie Ip</a>
-            <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>                        
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav navbar-right">
+                      <li><a href="index.html">About</a></li>
+                      <li><a href="portfolio.html">Portfolio</a></li>
+                      <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
         </div>
-    </header>
+    </nav>
 
-    <div id="top-container" class="container">
+    <div id="top-container" class="container-fluid">
         <section class="top-section">
             <h1>Contact</h1>
 
@@ -43,7 +58,7 @@
     </div>
 
     <footer>
-        <div class="container">
+        <div class="container-fluid">
             Copyright ©
         </div>
     </footer>
