add project 2 and todolist

--- a/index.html
+++ b/index.html
@@ -104,11 +104,18 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="Portfolio-text">Project 1</h2>
+          <a href="https://michaelhrivnak.github.io/JobRocket/">
           <img class="Portfolio-image" src="images/JobRocket.png" alt="project1-profile">
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="Portfolio-text">Project 2</h2>
+          <a href="https://uoft-project2.herokuapp.com/">
           <img class="Portfolio-image" src="images/project1.png" alt="project2-profile">
+        </div>
+        <div class="carousel-item container-fluid">
+          <h2 class="Portfolio-text">MongoDB To-Do-List</h2>
+          <a href="https://immense-fortress-31852.herokuapp.com/">
+            <img class="Portfolio-image" src="images/todolist.jpeg" alt="project2-profile">
         </div>
       </div>
       <a class="carousel-control-prev" href="#Portfolio-carousel" role="button" data-slide="prev">
@@ -127,9 +134,8 @@
     <div class="container-fluid">
       <i class="social-icon fab fa-facebook-f"></i>
       <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fab fa-instagram"></i>
       <i class="social-icon fas fa-envelope"></i>
-      <p>© Copyright 2020</p>
+      <p> © Copyright 2020 </p>
     </div>
   </footer>
 
