add screenshots and pictures

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1 class="big-heading">Hi, I am a website.</h1>
+          <h1 class="big-heading">Hi, I'm Bernie.</h1>
         </div>
 
       </div>
@@ -99,23 +99,43 @@
   <!-- Portfolio -->
 
   <section class="colored-section" id="Portfolio">
-
     <div id="Portfolio-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <h2 class="Portfolio-text">Project 1</h2>
+          <h2 class="Portfolio-text">JobRocket (Project 1)</h2>
           <a href="https://michaelhrivnak.github.io/JobRocket/">
-          <img class="Portfolio-image" src="images/JobRocket.png" alt="project1-profile">
+            <img src="images/JobRocket.png" height="183" width="275">
+          </a>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="Portfolio-text">Project 2</h2>
+          <h2 class="Portfolio-text">AirDate (Project 2)</h2>
           <a href="https://uoft-project2.herokuapp.com/">
-          <img class="Portfolio-image" src="images/project1.png" alt="project2-profile">
+            <img src="images/AirDate.png" height="183" width="275">
+          </a>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="Portfolio-text">MongoDB To-Do-List</h2>
-          <a href="https://immense-fortress-31852.herokuapp.com/">
-            <img class="Portfolio-image" src="images/todolist.jpeg" alt="project2-profile">
+        <h2 class="Portfolio-text">User Directory</h2>
+        <a href="https://sleepy-cove-72047.herokuapp.com/">
+          <img src="images/Userdirectory.png" height="183" width="275">
+        </a>
+      </div>
+        <div class="carousel-item container-fluid">
+          <h2 class="Portfolio-text">Code Quiz</h2>
+          <a href="https://bernieip.github.io/codequiz/">
+            <img src="images/codequiz.png" height="183" width="275">
+          </a>
+        </div>
+        <div class="carousel-item container-fluid">
+          <h2 class="Portfolio-text">Weather Planner</h2>
+          <a href="https://bernieip.github.io/weatherapp/">
+            <img src="images/weatherplanner.png" height="183" width="275">
+          </a>
+        </div>
+        <div class="carousel-item container-fluid">
+          <h2 class="Portfolio-text">Note Taker</h2>
+          <a href="https://cryptic-retreat-30790.herokuapp.com/">
+            <img src="images/notetaker.png" height="183" width="275">
+          </a>
         </div>
       </div>
       <a class="carousel-control-prev" href="#Portfolio-carousel" role="button" data-slide="prev">
@@ -128,16 +148,81 @@
 
   </section>
 
-  <!-- Footer -->
+  <!-- Features -->
 
-  <footer class="white-section" id="footer">
+  <section class="white-section" id="morefeatures">
+
     <div class="container-fluid">
-      <i class="social-icon fab fa-facebook-f"></i>
-      <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fas fa-envelope"></i>
-      <p> © Copyright 2020 </p>
+
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-check-circle fa-4x"></i>
+          <h3 class="feature-title">Title 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-bullseye fa-4x"></i>
+          <h3 class="feature-title">Title 2</h3>
+          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-heart fa-4x"></i>
+          <h3 class="feature-title">Title 3</h3>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas</p>
+        </div>
+      </div>
+
+
     </div>
+  </section>
+
+
+  <!-- Footer -->
+  <!-- Footer -->
+  <footer class="page-footer font-small cyan darken-3" id="footer">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Grid row-->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-12 py-5">
+          <div class="mb-5 flex-center">
+
+            <!-- GitHub +-->
+            <a class="gplus-ic" href="https://github.com/bernieip">
+              <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <!--Linkedin -->
+            <a class="li-ic" href="https://www.linkedin.com/in/bernie-ip/">
+              <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <!-- Resume +-->
+            <a class="gplus-ic" href="images/resume.pdf">
+              <i class="far fa-file fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+
+          </div>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row-->
+
+    </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright
+    </div>
+    <!-- Copyright -->
+
   </footer>
+  <!-- Footer -->
 
 
 </body>
