add color to hover icons

--- a/index.html
+++ b/index.html
@@ -194,15 +194,15 @@
           <div class="mb-5 flex-center">
 
             <!-- GitHub +-->
-            <a class="gplus-ic" href="https://github.com/bernieip">
+            <a class="hovericon" href="https://github.com/bernieip">
               <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
             <!--Linkedin -->
-            <a class="li-ic" href="https://www.linkedin.com/in/bernie-ip/">
+            <a class="hovericon" href="https://www.linkedin.com/in/bernie-ip/">
               <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
             <!-- Resume +-->
-            <a class="gplus-ic" href="images/resume.pdf">
+            <a class="hovericon" href="images/resume.pdf" { color: #FF0000; } >
               <i class="far fa-file fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
 
