add github links

--- a/index.html
+++ b/index.html
@@ -103,36 +103,54 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="Portfolio-text">JobRocket (Project 1)</h2>
+          <a class="hovericon" href="https://github.com/michaelhrivnak/JobRocket">
+            <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
           <a href="https://michaelhrivnak.github.io/JobRocket/">
             <img src="images/JobRocket.png" height="183" width="275">
           </a>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="Portfolio-text">AirDate (Project 2)</h2>
+          <a class="hovericon" href="https://github.com/saltamay/UofT_BootCamp_Project-2">
+            <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
           <a href="https://uoft-project2.herokuapp.com/">
             <img src="images/AirDate.png" height="183" width="275">
           </a>
         </div>
         <div class="carousel-item container-fluid">
         <h2 class="Portfolio-text">User Directory</h2>
+          <a class="hovericon" href="https://github.com/bernieip/react-userdirectory">
+            <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
         <a href="https://sleepy-cove-72047.herokuapp.com/">
           <img src="images/Userdirectory.png" height="183" width="275">
         </a>
       </div>
         <div class="carousel-item container-fluid">
           <h2 class="Portfolio-text">Code Quiz</h2>
+          <a class="hovericon" href="https://github.com/bernieip/codequiz">
+            <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
           <a href="https://bernieip.github.io/codequiz/">
             <img src="images/codequiz.png" height="183" width="275">
           </a>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="Portfolio-text">Weather Planner</h2>
+          <a class="hovericon" href="https://github.com/bernieip/weatherapp">
+            <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
           <a href="https://bernieip.github.io/weatherapp/">
             <img src="images/weatherplanner.png" height="183" width="275">
           </a>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="Portfolio-text">Note Taker</h2>
+          <a class="hovericon" href="https://github.com/bernieip/notetaker">
+            <i class="fab fa-github fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
           <a href="https://cryptic-retreat-30790.herokuapp.com/">
             <img src="images/notetaker.png" height="183" width="275">
           </a>
