--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
             <!-- Resume +-->
-            <a class="hovericon" href="images/resume.pdf" { color: #FF0000; } >
+            <a class="hovericon" href="images/testresume.pdf" >
               <i class="far fa-file fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
 
